--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 			<a href="https://shop.spreadshirt.com/twobuds" class="header-links">MERCH!</a>
 			<a href="https://www.youtube.com/user/chell1968" class="header-links">DEASONFUN</a>
 			<a href="https://www.youtube.com/user/ManOfGoo" class="header-links">MEMES!</a>
+			<a href="https://discord.com/invite/uU8RWNh" class="header-links">DISCORD</a>
 		</div>
 	</center>
 </header>
