--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,15 @@
 	<center>
 		<a href="http://twobuds.club"><img class="header-image" src="two_buds_squiggle.png"></img></a>
 		<div class="header-links-container">
-			<a href="https://www.youtube.com/channel/UCoJRtvFq6wKvv5YCeocfQIw" class="header-links">[TWO BUDS]</a>
 			<a href="https://shop.spreadshirt.com/twobuds" class="header-links">MERCH!</a>
 			<a href="https://www.youtube.com/user/chell1968" class="header-links">DEASONFUN</a>
 			<a href="https://www.youtube.com/user/ManOfGoo" class="header-links">MEMES!</a>
-			<a href="https://discord.com/invite/uU8RWNh" class="header-links">DISCORD</a>
+		</div>
+		<div class="social-links-container">
+			<a href="https://www.youtube.com/channel/UCoJRtvFq6wKvv5YCeocfQIw"><img src="youtube_logo.png" class="social-links"/></a>	
+			<a href="https://twitter.com/twobuds_?s=20"><img src="twitter_logo.png" class="social-links"/></a>	
+			<a href="https://discord.com/invite/uU8RWNh"><img src="discord_logo.png" class="social-links"/></a>	
+			<a href="https://github.com/Deasonfun/twobuds.club"><img src="github_logo.png" class="social-links"/></a>	
 		</div>
 	</center>
 </header>
