Changed some classes to ids

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 <script src="js/main.js"></script>
 <header>
 	<center>
-		<a href="http://twobuds.club"><img class="header-image" src="two_buds_squiggle.png"></img></a>
-		<div class="header-links-container">
+		<a href="http://twobuds.club"><img id="header-image" src="two_buds_squiggle.png"></img></a>
+		<div id="header-links-container">
 			<a href="https://shop.spreadshirt.com/twobuds" class="header-links">MERCH!</a>
 			<a href="https://www.youtube.com/user/chell1968" class="header-links">DEASONFUN</a>
 			<a href="https://www.youtube.com/user/ManOfGoo" class="header-links">MEMES!</a>
@@ -23,13 +23,12 @@
 			<video id="main_video" class="screen" autoplay onloadeddata="tv.onClipLoaded()" onended="tv.onClipFinished()"></video>
 			<img id="playButton" class="play_button" src="play_button.png" />
 		</div>
-		<div class="social-links-container">
+		<div id="social-links-container">
 			<a href="https://www.youtube.com/channel/UCoJRtvFq6wKvv5YCeocfQIw"><img src="youtube_logo.png" class="social-links"/></a>	
 			<a href="https://twitter.com/twobuds_?s=20"><img src="twitter_logo.png" class="social-links"/></a>	
 			<a href="https://discord.com/invite/uU8RWNh"><img src="discord_logo.png" class="social-links"/></a>	
 			<a href="https://github.com/Deasonfun/twobuds.club"><img src="github_logo.png" class="social-links"/></a>	
 		</div>
-
 	</center>
 </body>
 </html>
