HTML cleanup time!

--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,29 @@
 <html>
-<title>[TWO BUDS]</title>
-<link rel="icon" type="image/png" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="css/reset.css"/>
-<link rel="stylesheet" href="css/style.css"/>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/main.js"></script>
-<header>
-	<center>
-		<a href="http://twobuds.club"><img id="header-image" src="two_buds_squiggle.png"></img></a>
-		<div id="header-links-container">
-			<a href="https://shop.spreadshirt.com/twobuds" class="header-links">MERCH!</a>
-			<a href="https://www.youtube.com/user/chell1968" class="header-links">DEASONFUN</a>
-			<a href="https://www.youtube.com/user/ManOfGoo" class="header-links">MEMES!</a>
-		</div>
-	</center>
-</header>
-<body>
-	<center>
-		<div id="video-container">
-			<video src="content/video/support/snow2.mp4" loop class="interstitial"  onended="tv.onClipFinished()"></video>
-			<video id="main_video" class="screen" autoplay onloadeddata="tv.onClipLoaded()" onended="tv.onClipFinished()"></video>
-			<img id="playButton" class="play_button" src="play_button.png" />
-		</div>
-		<div id="social-links-container">
-			<a href="https://www.youtube.com/channel/UCoJRtvFq6wKvv5YCeocfQIw"><img src="youtube_logo.png" class="social-links"/></a>	
-			<a href="https://twitter.com/twobuds_?s=20"><img src="twitter_logo.png" class="social-links"/></a>	
-			<a href="https://discord.com/invite/uU8RWNh"><img src="discord_logo.png" class="social-links"/></a>	
-			<a href="https://github.com/Deasonfun/twobuds.club"><img src="github_logo.png" class="social-links"/></a>	
-		</div>
-	</center>
-</body>
+	<head>
+		<title>[TWO BUDS]</title>
+		<link rel="icon" type="image/png" href="favicon.ico">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="css/reset.css"/>
+		<link rel="stylesheet" href="css/style.css"/>
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="js/main.js"></script>
+	</head>
+	<header>
+		<a href="http://twobuds.club"><img class="header-image" src="two_buds_squiggle.png"></img></a>
+	</header>
+	<body>
+		<center>
+			<div id="video-container">
+				<video src="content/video/support/snow2.mp4" loop class="interstitial"  onended="tv.onClipFinished()"></video>
+				<video id="main_video" class="screen" autoplay onloadeddata="tv.onClipLoaded()" onended="tv.onClipFinished()"></video>
+				<img id="playButton" class="play_button" src="play_button.png" />
+			</div>
+			<div id="social-links-container">
+				<a href="https://www.youtube.com/channel/UCoJRtvFq6wKvv5YCeocfQIw"><img src="youtube_logo.png" class="social-links"/></a>	
+				<a href="https://twitter.com/twobuds_?s=20"><img src="twitter_logo.png" class="social-links"/></a>	
+				<a href="https://discord.com/invite/uU8RWNh"><img src="discord_logo.png" class="social-links"/></a>	
+				<a href="https://github.com/Deasonfun/twobuds.club"><img src="github_logo.png" class="social-links"/></a>	
+			</div>
+		</center>
+	</body>
 </html>
