Fixed header logo (went a little crazy with html cleanup)

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 		<script src="js/main.js"></script>
 	</head>
 	<header>
-		<a href="http://twobuds.club"><img class="header-image" src="two_buds_squiggle.png"></img></a>
+		<center>
+			<a href="http://twobuds.club"><img id="header-image" src="two_buds_squiggle.png"></img></a>
+		</center>
 	</header>
 	<body>
 		<center>
