Added cursors to cubetime

--- a/public/cubetime/index.html
+++ b/public/cubetime/index.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="../css/style.css"/>
     <body>
         <img id="background-img" src="./reborn_hallway.png" />
         <img id="logo-button" src="tb_logo.png" onclick="FadeIn()"/>
